--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:ieWsmfRpzqwzY1Q0jwsJGRJ+jQtOaWPukNBlqeNI7a0=
+APP_KEY=base64:1yCjY619ZiHOvT7GNZgIEwU4fKk1/XkAocbnPQ+mNlE=
 APP_DEBUG=true
 APP_URL=http://localhost:8080
 
@@ -22,8 +22,8 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=sqlite
 # DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=C:\Projetos\DoNation\database\database.sqlite
+# DB_PORT=3306
+# DB_DATABASE=C:\database\database.sqlite
 # DB_USERNAME=root
 # DB_PASSWORD=
 
